--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>The Scala.js Tutorial</title>
+    <title>Sample Page</title>
 </head>
 <body>
 <!-- Include Scala.js compiled code -->
