--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <title>Sample Page</title>
 </head>
 <body>
+<!-- Include JavaScript dependencies -->
+<script type="text/javascript" src="./scripts/recipe-scraper-jsdeps.js"></script>
 <!-- Include Scala.js compiled code -->
-<script type="text/javascript" src="./target/scala-2.12/recipe-scraper-fastopt.js"></script>
-<!-- Run tutorial.webapp.TutorialApp -->
-<script type="text/javascript">
-    com.schwartz.scraper.Scraper().main();
-</script>
+<script type="text/javascript" src="./scripts/recipe-scraper-opt.js"></script>
+<!-- Run main object -->
+<script type="text/javascript" src="./scripts/recipe-scraper-launcher.js"></script>
 </body>
 </html>
