Need to use https

--- a/index.html
+++ b/index.html
@@ -5,14 +5,15 @@
     <title>Recipe Scraper</title>
 </head>
 <body>
+<p>Drag this to your bookmark bar:</p>
 <a href="javascript: (function () {
     var code = document.createElement('script');
-    code.setAttribute('src', 'http://jakehschwartz.github.io/recipe-scraper/scripts/scraper.js');
+    code.setAttribute('src', 'https://jakehschwartz.github.io/recipe-scraper/scripts/scraper.js');
     document.body.appendChild(code);
 
     var execute = document.createElement('script');
-    execute.setAttribute('src', 'http://jakehschwartz.github.io/recipe-scraper/scripts/launcher.js');
+    execute.setAttribute('src', 'https://jakehschwartz.github.io/recipe-scraper/scripts/launcher.js');
     document.body.appendChild(execute);
- }());">Drag me to your bookmark bar!</a>
+ }());">Scraper</a>
 </body>
 </html>
